Changing validfrom and validtill fixed

--- a/views/editAnnouncement.html
+++ b/views/editAnnouncement.html
@@ -1,9 +1,9 @@
 <div ng-include="'views/dashboard.html'"></div>
 <div class='container announcement-container' ng-controller='AnnouncementCtrl'>
-    <div ng-if="!selectedIds">
+    <div ng-show="!selectedIds">
         <img src="images/gears-anime.gif">
     </div>
-    <form ng-if="selectedIds" ng-submit="update(announcement)" novalidate>
+    <div ng-show="selectedIds">
         <table class="table MT15">
             <thead>
                 <tr>
@@ -77,7 +77,7 @@
                         <div class="dropdown form-group">
                             <a class="dropdown-toggle" id="dropdownStart" role="button" data-toggle="dropdown" data-target="#" href="#">
                                 <div class="input-group date">
-                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" ng-click="showWarning()" class="form-control" data-ng-model="dateRangeStart" placeholder="Valid From" required="true" readonly>
+                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" ng-click="showWarning()" class="form-control" data-ng-model="dateRangeStart" placeholder="Valid From" required readonly>
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                 </div>
                             </a>
@@ -95,7 +95,7 @@
                         <div class="dropdown form-group">
                             <a class="dropdown-toggle" id="dropdownEnd" role="button" data-toggle="dropdown" data-target="#" href="#">
                                 <div class="input-group date">
-                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeEnd" placeholder="Valid Till" readonly>
+                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeEnd" placeholder="Valid Till" required readonly>
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                 </div>
                             </a>
@@ -111,7 +111,7 @@
                     </th>
                     <td>
                         <div class="demo-section k-content">
-                            <select kendo-multi-select k-options="selectOptions" k-ng-model="selectedIds" ng-model='announcement.regionCode'>
+                            <select kendo-multi-select k-options="selectOptions" k-ng-model="selectedIds" ng-model='announcement.regionCode' required>
                             </select>
                         </div>
                     </td>
@@ -153,6 +153,6 @@
                 </tr>
             </thead>
         </table>
-        <button type="submit" class="btn btn-success">Update</button>
-    </form>
+        <button type="button" class="btn btn-success" ng-click="update(announcement)">Update</button>
+    </div>
 </div>
