--- a/views/editNotification.html
+++ b/views/editNotification.html
@@ -1,6 +1,9 @@
 <div ng-include="'views/dashboard.html'"></div>
 <div class='container announcement-container' ng-controller='NotificationCtrl'>
-    <form ng-submit="update(notification)" novalidate>
+    <div ng-show="!notification">
+        <img src="images/gears-anime.gif">
+    </div>
+    <div ng-show="notification">
         <table class="table MT15">
             <thead>
                 <tr>
@@ -8,7 +11,7 @@
                         <label for="campaign">CampaignName<span id="red"> *</span>:</label>
                     </th>
                     <td>
-                        <input type="text" maxlength="30" class="form-control" ng-model='notification.campaign' placeholder="Campaign Name" ng-disabled="true" required>
+                        <input type="text" maxlength="30" class="form-control" ng-model='notification.campaign' placeholder="Campaign Name" readonly required>
                     </td>
                 </tr>
                 <tr>
@@ -35,7 +38,7 @@
                         <label for="imgURL">Icon URL:</label>
                     </th>
                     <td>
-                        <input type="url" class="form-control" ng-model='notification.imgURL' placeholder="Image Url"/>
+                        <input type="url" class="form-control" ng-model='notification.imgURL' placeholder="Image Url" />
                     </td>
                 </tr>
                 <tr>
@@ -74,7 +77,7 @@
                         <div class="dropdown form-group">
                             <a class="dropdown-toggle" id="dropdownStart" role="button" data-toggle="dropdown" data-target="#" href="#">
                                 <div class="input-group date">
-                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" ng-click="showWarning()" class="form-control" data-ng-model="dateRangeStart" placeholder="Valid From" readonly required="true">
+                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeStart" placeholder="Valid From" required readonly>
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                 </div>
                             </a>
@@ -92,7 +95,7 @@
                         <div class="dropdown form-group">
                             <a class="dropdown-toggle" id="dropdownEnd" role="button" data-toggle="dropdown" data-target="#" href="#">
                                 <div class="input-group date">
-                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeEnd" placeholder="Valid Till" readonly>
+                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeEnd" placeholder="Valid Till" required readonly>
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                 </div>
                             </a>
@@ -107,7 +110,7 @@
                         <label for="memberEmail">Member Email <span id="red">*</span>:</label>
                     </th>
                     <td>
-                        <input type="text" class="form-control" ng-model='notification.memberEmail' placeholder="Member Email" ng-blur="fetchMemberId()">
+                        <input type="text" class="form-control" ng-model='notification.memberEmail' placeholder="Member Email" ng-blur="fetchMemberId()" required>
                     </td>
                 </tr>
                 <tr>
@@ -115,7 +118,7 @@
                         <label for="memberId">Member ID <span id="red">*</span>:</label>
                     </th>
                     <td>
-                        <input type="text" class="form-control" ng-model='notification.memberId' placeholder="Member ID" ng-disabled="true">
+                        <input type="text" class="form-control" ng-model='notification.memberId' placeholder="Member ID" readonly required>
                     </td>
                 </tr>
                 <tr ng-show="notification.cardType == 'PT_CTA' || notification.cardType == 'PlainText with CTA'">
@@ -155,6 +158,6 @@
                 </tr>
             </thead>
         </table>
-        <button type="submit" class="btn btn-success">Update</button>
-    </form>
+        <button type="button" class="btn btn-success" ng-click="update(notification)">Update</button>
+    </div>
 </div>
