--- a/views/viewCampaigns.html
+++ b/views/viewCampaigns.html
@@ -52,7 +52,7 @@
     </div>
     <div ng-controller="OtherController">
         <div class="text-center">
-            <dir-pagination-controls boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="dirPagination.tpl.html"></dir-pagination-controls>
+            <dir-pagination-controls boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="lib/pagination/dirPagination.tpl.html"></dir-pagination-controls>
         </div>
     </div>
 </div>
