--- a/views/createCampaign.html
+++ b/views/createCampaign.html
@@ -166,7 +166,8 @@
                         <label for="memberId">Member ID <span id="red">*</span>:</label>
                     </th>
                     <td>
-                        <div id="value1"></div>
+                        <!-- <div id="value1" ng-model="message.memberId"></div> -->
+                        <input class="form-control" ng-model='message.memberId' placeholder="memberId" disabled />
                     </td>
                 </tr>
                 <tr>
