--- a/views/editAnnouncement.html
+++ b/views/editAnnouncement.html
@@ -148,7 +148,25 @@
                         <label for="appCode">Appcode:</label>
                     </th>
                     <td>
-                        <select class="btn btn-default" ng-model="announcement.appCodes[0].appCode" ng-options="v for v in selectType.appCodeTypeValues"></select>
+                        <!--  <select class="btn btn-default" ng-model="announcement.appCodes[0].appCode" ng-options="v for v in selectType.appCodeTypeValues"></select> -->
+                        <div class="md-padding demo checkboxdemoSelectAll">
+                            <md-checkbox aria-label="Select All" ng-checked="isChecked()" md-indeterminate="isIndeterminate()" ng-click="toggleAll()">
+                                <span ng-if="isChecked()">Un-</span>Select All Appcodes
+                            </md-checkbox>
+                            <div class="demo-select-all-checkboxes" flex="100" ng-repeat="item in items">
+                                <md-checkbox ng-checked="exists(item, selected);" ng-click="toggle(item, selected)">
+                                    {{ item }}
+                                </md-checkbox>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                <tr ng-show='showDiv'>
+                    <th>
+                        tEST
+                    </th>
+                    <td>
+                        dEMO
                     </td>
                 </tr>
             </thead>
