--- a/views/createCampaign.html
+++ b/views/createCampaign.html
@@ -185,15 +185,12 @@
             <label for="advanced"><span></span> Advanced </label>
             <span class="graySmallText">( Custom key-value pairs, Deep link )</span>
         </div>
-        <div class="grid push-form" ng-show="advanced">
+        <div class="grid push-form" ng-show="!advanced">
             <div ng-model="showKeyValue" ng-show="showKeyValue">
                 <key-value></key-value>
             </div>
         </div>
-        <input type="text" placeholder="Key" ng-model="model.name">
-        <input style="margin-left: 2px;" type="text" placeholder="Value" ng-model="model.value">
-        <button ng-click="makejson()"></button>
-        {{keyValue}}
+        {{local}}
         <button type="submit" class="btn btn-primary" ng-click="create(message)">Create</button>
     </div>
 </div>
