--- a/views/createCampaign.html
+++ b/views/createCampaign.html
@@ -202,11 +202,17 @@
             <span class="graySmallText">( Custom key-value pairs, Deep link )</span>
         </div>
         <div class="grid push-form" ng-show="!advanced">
+            <a href data-ng-click="addNewKeyValuePair()">+ Add New Pair</a>
             <div ng-model="showKeyValue" ng-show="showKeyValue">
-                <key-value></key-value>
+                <div data-ng-repeat="keyValuePair in keyValuePairs" style="padding-bottom: 5px;">
+            <input type="text" ng-model="keyValuePair.name" placeholder="Key">
+            <input style="margin-left: 2px;" type="text" ng-model="keyValuePair.value" placeholder="Value">
+            <button style="margin-left: 3px;" ng-click="removeKeyValuePair($index)">X</button>
+            </div>
             </div>
         </div>
-        {{local}}
+        {{keyValuePairs}}
+        {{parsedKeyValuePair}}
         <button type="submit" class="btn btn-primary" ng-click="create(message)">Create</button>
     </div>
 </div>
