--- a/views/createCampaign.html
+++ b/views/createCampaign.html
@@ -205,13 +205,13 @@
             <a href data-ng-click="addNewKeyValuePair()">+ Add New Pair</a>
             <div ng-model="showKeyValue" ng-show="showKeyValue">
                 <div data-ng-repeat="keyValuePair in keyValuePairs" style="padding-bottom: 5px;">
-            <input type="text" ng-model="keyValuePair.name" placeholder="Key">
-            <input style="margin-left: 2px;" type="text" ng-model="keyValuePair.value" placeholder="Value">
-            <button style="margin-left: 3px;" ng-click="removeKeyValuePair($index)">X</button>
-            </div>
+                    <input type="text" ng-model="keyValuePair.name" placeholder="Key">
+                    <input style="margin-left: 2px;" type="text" ng-model="keyValuePair.value" placeholder="Value">
+                    <button ng-click="pushToParseKeyValuePair()">Save</button>
+                    <button style="margin-left: 3px;" ng-click="removeKeyValuePair($index,keyValuePair.name)">X</button>
+                </div>
             </div>
         </div>
-        {{keyValuePairs}}
         {{parsedKeyValuePair}}
         <button type="submit" class="btn btn-primary" ng-click="create(message)">Create</button>
     </div>
