--- a/views/createCampaign.html
+++ b/views/createCampaign.html
@@ -178,41 +178,38 @@
                             <md-checkbox aria-label="Select All" ng-checked="isChecked()" md-indeterminate="isIndeterminate()" ng-click="toggleAll()">
                                 <span ng-if="isChecked()">Un-</span>Select All Appcodes
                             </md-checkbox>
-                            <div class="demo-select-all-checkboxes" flex="100" ng-repeat="item in items">
-                                <md-checkbox ng-checked="exists(item, selected);" ng-click="toggle(item, selected)">
-                                    {{ item }}
-                                </md-checkbox>
+                            <div class="row">
+                                <div class="demo-select-all-checkboxes" flex="100" ng-repeat="item in items">
+                                    <div class="col-md-3">
+                                        <md-checkbox ng-checked="exists(item, selected);" ng-click="toggle(item, selected)">
+                                            {{ item }}
+                                        </md-checkbox>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </td>
                 </tr>
                 <tr ng-show="showDiv">
                     <th>
-                        tEST
+                        <label for="showKeyValue">Custom key-value pairs</label>
                     </th>
                     <td>
-                        dEMO
+                        <div class="grid push-form">
+                            <div ng-model="showKeyValue" ng-show="showKeyValue">
+                                <div data-ng-repeat="keyValuePair in keyValuePairs" style="padding-bottom: 5px;">
+                                    <input type="text" ng-model="keyValuePair.name" placeholder="Key">
+                                    <input style="margin-left: 2px;" type="text" ng-model="keyValuePair.value" placeholder="Value">
+                                    <!-- <button ng-click="pushToParseKeyValuePair()">Save</button> -->
+                                    <button style="margin-left: 3px;" ng-click="removeKeyValuePair($index,keyValuePair.name)">X</button>
+                                </div>
+                            </div>
+                            <a href data-ng-click="addNewKeyValuePair()">+ Add New Pair</a>
+                        </div>
                     </td>
                 </tr>
             </thead>
         </table>
-        <div class="PB20">
-            <input type="checkbox" id="advanced" ng-model="advanced">
-            <label for="advanced"><span></span> Advanced </label>
-            <span class="graySmallText">( Custom key-value pairs, Deep link )</span>
-        </div>
-        <div class="grid push-form" ng-show="!advanced">
-            <a href data-ng-click="addNewKeyValuePair()">+ Add New Pair</a>
-            <div ng-model="showKeyValue" ng-show="showKeyValue">
-                <div data-ng-repeat="keyValuePair in keyValuePairs" style="padding-bottom: 5px;">
-                    <input type="text" ng-model="keyValuePair.name" placeholder="Key">
-                    <input style="margin-left: 2px;" type="text" ng-model="keyValuePair.value" placeholder="Value">
-                    <button ng-click="pushToParseKeyValuePair()">Save</button>
-                    <button style="margin-left: 3px;" ng-click="removeKeyValuePair($index,keyValuePair.name)">X</button>
-                </div>
-            </div>
-        </div>
-        {{parsedKeyValuePair}}
         <button type="submit" class="btn btn-primary" ng-click="create(message)">Create</button>
     </div>
 </div>
