--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -49,6 +49,7 @@
             <ul class="submenu-option tooltip-right">
                 <!-- <li class=""><a href="javascript:void(0)">Create Campaigns</a></li> -->
                 <li ng-class="{active : isRouteActive('/createCampaign')}"><a href="#/createCampaign" class=""><i class="fa fa-paper-plane"></i> Create Campaign</a></li>
+                <li ng-class="{active : isRouteActive('/createUser')}"><a href="#/createUser" class=""><i class="fa fa-paper-plane"></i> Create User</a></li>
             </ul>
         </ul>
         <div class="clearfix"></div>
